# mathsgenerator

./: .gitignore  README.md  pyproject.toml
output/homework/: homework_example.py  year7_frac_homework.py
output/homework/year7_output/: year7_homework_fractions.tex  year7_homework_week05.tex  year7_homework_week06.tex
output/homework/year8_output/: year8_homework_week06.tex
output/weekly_assessments/: homework_example.py  year7_neg_frac.py  year7_weekly_assessment.py  year8_neg_frac_pow.py  year9_neg_frac_pow_std_form.py
output/weekly_assessments/year7_output/: year7_weekly_assessment.tex  year7_weekly_assessment_fractions.tex  year7_weekly_assessment_week05.tex
src/: testing.py  year7_homework.py  year7_weekly_assessment.py  year7_weekly_assessment_algebra.py  year7_weekly_assessment_numbers.py  year8_homework.py  year8_weekly_assessment.py  year8_weekly_assessment_algebra.py  year8_weekly_assessment_numbers.py  year9_weekly_assessment.py  year9_weekly_assessment_algebra.py  year9_weekly_assessment_numbers.py
src/math_generator/: __init__.py  algebra_expanding.py  algebra_expanding_expressions.py  algebra_factorising.py  algebra_graphing.py  algebra_helpers.py  algebra_simplifying.py  algebra_simplifying_expressions.py  fractions.py  fractions_percentages_decimals.py  geometry_shapes_generator.py  interest_rates.py  negative_numbers.py  numbers_fractions_operators.py  operators.py  power_rules.py  prime_factors_hcf_lcm.py  rounding_and_approximation.py  standard_form.py  surds.py  tsz_latex_generator.py
tests/: test_maths_generator.py
(+5 files in other folders)
